--- a/Lesson6/index.html
+++ b/Lesson6/index.html
@@ -14,10 +14,20 @@
 
     <script>
         var cryptoZombies;
+        var userAccount;
 
         function startApp() {
             var cryptoZombiesAddress = "YOUR_CONTRACT_ADDRESS";
             cryptoZombies = new web3js.eth.Contract(cryptoZombiesABI, cryptoZombiesAddress);
+
+            var accountInterval = setInterval(function () {
+                // Check if account has changed
+                if (web3.eth.accounts[0] !== userAccount) {
+                    userAccount = web3.eth.accounts[0];
+                    // Call some function to update the UI with the new account
+                    getZombiesByOwner(userAccount).then(displayZombies);
+                }
+            }, 100);
         }
 
         function getZombieDetails(id) {
@@ -25,11 +35,11 @@
         }
 
         function zombieToOwner(id) {
-            return cryptoZombies.methods.zombieToOwner(id).call();
+            return cryptoZombies.methods.zombieToOwner(id).call()
         }
 
         function getZombiesByOwner(owner) {
-            return cryptoZombies.methods.getZombiesByOwner(owner).call();
+            return cryptoZombies.methods.getZombiesByOwner(owner).call()
         }
 
         window.addEventListener('load', function () {
